<resources>
    <string name="app_name">InventoryApp</string>
    <string name="insert_dummy_item">Insert dummy item</string>
    <string name="name_of_the_item">Name of the item</string>
    <string name="price_of_the_item">Price</string>
    <string name="price_placeholder">199</string>
    <string name="quantity_of_the_item">Quantity</string>
    <string name="quantity_placeholder">15</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="change_stock_by">By:</string>
    <string name="supplier">Supplier</string>
    <string name="phone">Phone</string>
    <string name="stock_change_title">Increase/decrease stock</string>
    <string name="add_item_title">Add item</string>
    <string name="edit_item_title">Edit item</string>
    <string name="action_delete_all_items">Delete all items</string>
    <string name="delete_all_dialog_msg">Do you really want to delete all items?</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_details">Details</string>
    <string name="option_delete">Delete</string>
    <string name="option_edit">Edit</string>
    <string name="option_save">Save</string>
    <string name="all_items_deleted">All items deleted!</string>
    <string name="item_inserted">Item inserted!</string>
    <string name="title_activity_editor">Edit Item</string>
    <string name="editor_insert_item_failed">Insert item failed!</string>
    <string name="editor_insert_item_successful">Item inserted!</string>
    <string name="editor_update_item_failed">Item update failed!</string>
    <string name="editor_update_item_successful">Item updated!</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="supplier_of_the_item">Supplier</string>
    <string name="phone_of_supplier">Phone number</string>
    <string name="order">Order</string>
    <string name="sale">Sale</string>
    <string name="editor_activity_title_new_item">New inventory item</string>
    <string name="editor_delete_item_successful">Item deleted!</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="validation_incomplete_item">Please fill the form with the required information!</string>
    <string name="usage_info">Please add items by taping on the Add button in the bottom right corner of the screen.\nRequired fields: Name, Price, Supplier, Suplier\'s phone number.</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="quantity_not_available">This quantity isn\'t available</string>
    <string name="edit_name_label">Name (required)</string>
    <string name="edit_price_label">Price (required)</string>
    <string name="edit_quantity_label">Price (default 0)</string>
    <string name="edit_supplier_label">Supplier (required)</string>
    <string name="edit_phone_label">Supplier\'s phone number (required)</string>
    <string name="empty_image_description">Store image</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="change_quantity_default">1</string>
</resources>
