<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/small_margin"
    android:orientation="horizontal">

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_margin"
        style="@style/ButtonStyle"
        android:focusable="false"
        android:text="@string/sale" />

    <LinearLayout
        style="@style/DetailsPropertyStyle">

        <TextView
            android:id="@+id/name"
            style="@style/ListTitle"
            tools:text="@string/name_of_the_item" />

        <LinearLayout
            style="@style/ListPropertyStyle">

            <TextView
                android:id="@+id/price_label"
                style="@style/ListLabel"
                tools:text="@string/price_of_the_item"
                android:text="@string/price_of_the_item" />
            <TextView
                android:id="@+id/price"
                style="@style/ListValue"
                tools:text="@string/price_placeholder" />

        </LinearLayout>
        <LinearLayout
            style="@style/ListPropertyStyle">

            <TextView
                android:id="@+id/quantity_label"
                style="@style/ListLabel"
                tools:text="@string/quantity_of_the_item"
                android:text="@string/quantity_of_the_item" />

            <TextView
                android:id="@+id/quantity"
                style="@style/ListValue"
                tools:text="@string/quantity_placeholder" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>